--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ you get one Smoke NFT.</div>
         
   <img src="images/m1000x1000-removebg-preview.png" width="1000" height="600">
 
-<div class="desc">Banksy controls all the gangs money. He is the brain behind all porjects<br>Aggressive in his skills and prompt with his decisions <br>To aquire Banksy you'll need more than 1900 H9H tokens. <br>Rarity is applied to this collection.</div>
+<div class="desc">Banksy controls all the gangs money. He is the main plug. He is the brain behind all porjects<br>Aggressive in his skills and prompt with his decisions <br>To aquire Banksy you'll need more than 1900 H9H tokens. <br>Rarity is applied to this collection.</div>
 </div>
 
 
