--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ div.desc {
           <img src="images/CHto-delaet-Otmorozok-v-mafii-removebg-preview (1).png" width="1000" height="600">  
           <div class="desc">First HipHop NFT of its kind.
         <br> Lil Zappy is the code name.
-        <br>To aquire Lil Zappy you'll need more than 500 H9H tokens. <br>Rarity is applied to this collection.
+        <br>To aquire Lil Zappy you'll need more than 500 H9H tokens. The First Yard NFT. <br>Rarity is applied to this collection.
           </div>
     </div>
 
