--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ div.desc {
         <img src="images/maxresdefault-removebg-preview (2).png" width="1000" height="600"> 
           
         
-          <div class="desc">This is Stoned Hippy.<br> The dope dealer of the whole squad. Always smokin' & dealing like a pimp<br>To aquire Stoned Hippy you'll need more than 1200 H9H tokens. <br>Extreme-rarity is also applied to this collection</div>
+          <div class="desc">This is Stoned Hippy.<br> The dope dealer of the whole Team. Always smokin' & dealing like a pimp<br>To aquire Stoned Hippy you'll need more than 1200 H9H tokens. <br>Extreme-rarity is also applied to this collection</div>
       </div>
 
       <br>
